[package]
build = "build.rs"
name = "clip_img"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
image = "0.24.6"
ndarray = "0.15.6"
tracing = "0.1.37"

[dependencies.ort]
version = "1.14.8"
features = ["load-dynamic", "coreml"]

[build-dependencies]
anyhow = "1.0.71"
build_cfg = "1.1.0"

[dev-dependencies]
serde_json = "1.0.96"
anyhow = "1.0.71"
