[package]
license = "SSPL-1.0"
homepage = "https://github.com/xxai-art/clip-runtime/tree/main/rust/clip_txt"
repository = "https://github.com/xxai-art/clip-runtime.git"
description = "transformers.CLIPImageProcessor 的 rust 版本的实现。用于将图片转为向量（一般是 224x224），然后传给 clip。"
build = "build.rs"
name = "clip_img"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
aom-decode = "0.2.6"
avif_img = "0.1.2"
ndarray = "0.15.6"
tracing = "0.1.37"

[build-dependencies]
anyhow = "1.0.75"
build_cfg = "1.1.0"

[dev-dependencies]
serde_json = "1.0.105"
