[package]
name = "clip_img2qdrant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
awp = "0.1.2"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
quinn = { version = "0.10", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "ring"
] }
tracing = "0.1.37"
tonic = "0.9.2"
prost = "0.11.9"
thiserror = "1.0.40"
tonic_catch = "0.1.2"
async-trait = "0.1.68"

[dependencies.reqwest]
version = "0.11.18"
features = ["tokio-rustls", "http3"]

[dependencies.clip_qdrant]
path = "../clip_qdrant"
version = "0.1.1"

[dependencies.clip_runtime]
path = "../clip_runtime"
version = "0.1.3"

[build-dependencies]
tonic-build = "0.9.2"
