[package]
edition = "2021"
name = "w5_rust-template"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
napi-derive = "2.12.5"

[dependencies.napi]
version = "2.12.6"
path = "./lib/napi-rs/crates/napi"
default-features = false
features = [
  "napi8",
  "error_anyhow"
  # "tokio_rt",
  # "async"
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true
