[package]
license = "SSPL-1.0"
description = "qdrant client for clip"
homepage = "https://github.com/xxai-art/clip-runtime/tree/main/rust/clip_qdrant"
repository = "https://github.com/xxai-art/clip-runtime.git"
name = "clip_qdrant"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
ctor = "0.2.4"
paste = "1.0.14"
qdrant-client = "1.4.0"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tonic = "0.9.2"
tracing = "0.1.37"
trt = "0.1.5"
