[package]
name = "clip_search_img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
quinn = { version = "0.10", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "ring"
] }
tracing = "0.1.37"
tonic = "0.9.2"
prost = "0.11.9"
thiserror = "1.0.44"
tonic_catch = "0.1.3"
async-trait = "0.1.72"
tracing-subscriber = "0.3.17"
serde_json = "1.0.104"
trt = "0.1.5"
ctor = "0.2.4"

[dependencies.reqwest]
version = "0.11.18"
features = ["tokio-rustls", "http3"]

[dependencies.clip_qdrant]
path = "../clip_qdrant"
version = "0.1.1"

[dependencies.clip_runtime]
path = "../clip_runtime"
version = "0.1.3"

[build-dependencies]
tonic-build = "0.9.2"
