[package]
name = "clip_search_txt"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
volo-gen = { path = "./volo-gen", package = "clip_search_txt_volo_gen" }
volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
loginit = "0.1.3"
tracing = "0.1.37"
volo_macro = "0.1.2"
clip_runtime = { path = "../clip_runtime" }
clip_qdrant = { path = "../clip_qdrant" }
qdrant-client = "1.4.0"
lingua = "1.5.0"
phf = { version = "0.11.2", features = ["phf_macros", "macros"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "0.5"
volo-build = "0.6"
volo-grpc = "0.6"
pilota = "0.8"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio = "1"
