[package]
name = "clip_search_txt_client"
version = "0.1.5"
edition = "2021"
description = "clip_search_txt client"
homepage = "https://github.com/xxai-art/clip-runtime"
license = "SSPL-1.0"

[workspace]
members = []
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
volo-gen = { package = "clip_search_txt_volo_gen", version = "0.1.3" }

[dev-dependencies]
loginit = "0.1.3"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.37"
