[package]
name = "clip_srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
qdrant-client = "1.2.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tonic = "0.9.2"
tower = "0.4.13"

[dependencies.clip_runtime]
path = "../clip_runtime"
version = "0.1.0"
