[package]
name = "clip_srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
reqwest = { version = "0.11.17", features = ["tokio-rustls", "http3"] }
tracing = "0.1.37"
tracing-stackdriver = { version = "0.7.1", optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
coarsetime = "0.1.23"
futures = "0.3.28"

[dependencies.clip_qdrant]
path = "../clip_qdrant"
version = "0.1.0"

[dependencies.clip_runtime]
path = "../clip_runtime"
version = "0.1.0"
