[package]
homepage = "https://github.com/xxai-art/clip-runtime/tree/main/rust/clip_txt"
repository = "https://github.com/xxai-art/clip-runtime.git"
name = "clip_txt"
description = "Tokener for clip txt"
version = "0.1.0"
edition = "2021"
license = "MulanPSL2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
tokenizers = "0.13.3"
