[package]
name = "clip_search_txt_volo_gen"
description = "clip_search_txt volo gen"
homepage = "https://github.com/xxai-art/clip-runtime"
license = "SSPL-1.0"
version = "0.1.12"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
volo-build.workspace = true